# supermarket-till-backend

./: Dockerfile  README.md  TillBackend.java  TillIntegration.java  pyproject.toml  requirements.txt
till/: app.py  wsgi.py
till/application/: item_dto.py  purchase_items_request_dto.py
till/application/services/: purchase_items.py
till/core/: purchase.py
till/core/interfaces/: purchases_topic.py
till/integration/topics/: purchases_topic.py  purchases_topic_static.py
